Use Microsoft.AspNetCore.OData for adding OData query options capabilities
